    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="${relativePackage}.${activityClass}" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip" >

            <com.facebook.widget.LoginButton
                android:id="@+id/btnFbLogin"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:text="Login Button" />


            <!-- View Title Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@+string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone"/>
            <!-- Email Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/GREEN_00a550"
                android:text="@+string/username" />
            <!-- Email TextField -->

            <EditText
                android:id="@+id/loginName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="@color/GREEN_00a550"
                android:text="@string/password" />
            <!-- Password TextField -->

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <!-- Error message -->

            <TextView
                android:id="@+id/loginError"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@color/GREEN_00a550"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:text="@string/login" />

            <!-- Link to Registration Screen -->

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@null"
                android:textSize="13sp"
                android:text="@string/link_to_register_screen"
                android:textColor="@color/GREEN_00a550" />

            <Button
                android:id="@+id/btnLinkToForgotPassDialog"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textSize="13sp"
                android:text="@string/link_open_forgot_pass_dialog"
                android:textColor="@color/GREEN_00a550" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tv_about_copyright"
                    android:textColor="@color/GREEN_00a550"/>
            </LinearLayout>
        </LinearLayout>
        </ScrollView>
    </RelativeLayout>
