<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="${relativePackage}.${activityClass}">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dip">

            <!-- Email Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@+string/fullname"
                android:textColor="@color/GREEN_00a550"/>
            <!-- Fullname TextField -->

            <EditText
                android:id="@+id/signUpFullName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@+string/username"
                android:textColor="@color/GREEN_00a550"/>
            <!-- Email TextField -->

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <!-- Password Label -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/GREEN_00a550"/>
            <!-- Password TextField -->

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <!-- Error message -->

            <TextView
                android:id="@+id/signUpError"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold"/>

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@color/GREEN_00a550"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>

            <!-- Link to Registration Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:background="@null"
                android:text="@string/link_to_login_screen"
                android:textColor="@color/GREEN_00a550"
                android:textSize="13sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tv_about_copyright"
                    android:textColor="@color/GREEN_00a550"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>