<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GREEN_00a550"
        android:gravity="top" >

        <LinearLayout
            android:id="@+id/dialog_forgot_pass_linearTitle"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_forgot_pass_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/dialog_forgot_pass_title"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_forgot_pass_relaDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/GREEN_55b847" >

        <TextView
            android:id="@+id/dialog_forgot_pass_tv_username_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dp"
            android:padding="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/dialog_forgot_pass_tv_username_email"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/dialog_forgot_pass_ed_username_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dialog_forgot_pass_tv_username_email"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:singleLine="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/GREEN_81c341" >

        <Button
            android:id="@+id/dialog_forgot_pass_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/dialog_forgot_pass_view"
            android:background="@color/GREEN_81c341"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:id="@+id/dialog_forgot_pass_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/dialog_forgot_pass_btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/dialog_forgot_pass_view"
            android:background="@color/GREEN_81c341"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@android:string/cancel"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>